# todo-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml
db/init/: 01-init.sh
ingest/: README.md  auth.py  pyproject.toml  setup_watch.py
ingest/src/ingest/: __main__.py  alerts.py  buckets.py  claude_client.py  db.py  gmail_client.py  heartbeat.py  logging.py  models.py  processor.py  settings.py  subscriber.py  vikunja_client.py
ingest/systemd/: ingest-heartbeat.service.example  ingest-heartbeat.timer.example  ingest-watch-renew.service.example  ingest-watch-renew.timer.example  ingest.service.example  renew-watch.cron.example
